Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27220

qtquick2-extension wizard sources cause warnings when loading Qt Creator project

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 8.0.0
    • Quick / QML Support
    • None
    • 9f63aeb781 (qt-creator/qt-creator/master)

    Description

      When opening a project in Qt Creator, all qml files get validated, and if necessary, errors are added to the issues pane. When opening Qt Creator (the project), the qml files of the wizards cause issue entries:

      The usual solution for that is to name the file .qml.tpl instaead.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-27220
        # Subject Branch Project Status CR V

        Activity

          People

            artem.sokolovskii Artem Sokolovskii
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes