Wizard: Remove warning

Fix misspelling

Fixes: QTCREATORBUG-27220
Change-Id: I279ec8982a23aecae099e0062c77e7f1128beb71
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>