share/qtcreator/templates/wizards/projects/qtquick2-extension/example/example.cpp
@@ -10,7 +10,7 @@ int main(int argc, char *argv[])
 
     QQmlApplicationEngine engine;
     // The first subfolder is the libraryName followed by the regular
-    // folder structure: LibararyName/Subfolder
+    // folder structure: LibraryName/Subfolder
     const QUrl url(u"qrc:/ExampleProjectApp/example/example.qml"_qs);
     QObject::connect(&engine, &QQmlApplicationEngine::objectCreated,
         &app, [url](QObject *obj, const QUrl &objUrl) {
